--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -1,6 +1,6 @@
 package:
   name: gdx-reader
-  version: "0.1.0"
+  version: "0.1.1"
  
 source:
   git_url: ../
@@ -10,7 +10,7 @@ requirements:
   build:
     - python
     - cython
-    - numpy
+    - numpy ==1.10.1
   run:
     - python
     - numpy
