--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -1,6 +1,6 @@
 package:
   name: gdx-reader
-  version: "0.1.1"
+  version: "0.1.2"
  
 source:
   git_url: ../
@@ -13,7 +13,7 @@ requirements:
     - numpy ==1.10.1
   run:
     - python
-    - numpy
+    - numpy ==1.10.1
     - pandas
  
 about:
