--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -1,6 +1,6 @@
 package:
   name: gdx-reader
-  version: "0.2.5"
+  version: "0.2.6"
  
 source:
   git_url: ../
@@ -10,11 +10,14 @@ requirements:
   build:
     - python
     - cython
-    - numpy ==1.10.1
+    - numpy
   run:
     - python
-    - numpy ==1.10.1
+    - numpy
     - pandas
  
 about:
   summary: "Read GDX files fast using the GAMS C API"
+  license: GPL
+  license_file: LICENSE
+  home: https://github.com/joelgoop/gdx-reader
